dark mode fix

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a, a:visited {
     color: #fff;
     display: inline-block;
     background-color: #4a4a4a;
-    background-color: rgb(225, 225, 225, 0.8);
+    background-color: rgb(85, 85, 85, 0.7);
     padding: 0 0.1em;
     line-height: normal;
 }
